Add language picker to ChooseRole Screen

--- a/mobile/translations/am.json
+++ b/mobile/translations/am.json
@@ -15,5 +15,6 @@
   "favouritesSubtitle": "በማንኛውም ንብረት ላይ ልብ ምልክት\n አድርጉ እና ወደ የተወደዱ ዝርዝር ይላካል",
   "messages": "መልዕክቶች",
   "no_messages_yet": "እስካሁን መልዕክቶች የሉም",
-  "no_messages_subtitle": "ማንኛውም ሰው መልዕክት ሲልክ፣ እዚህ ይታያል። ንግግር ይጀምሩ!"
+  "no_messages_subtitle": "ማንኛውም ሰው መልዕክት ሲልክ፣ እዚህ ይታያል። ንግግር ይጀምሩ!",
+  "chooseYourRole": "ሚናዎን ይምረጡ"
 }
