--- a/mobile/translations/en.json
+++ b/mobile/translations/en.json
@@ -15,5 +15,6 @@
   "favouritesSubtitle": "Tap the heart icon on any\nproperty to add it to favourites",
   "messages": "Messages",
   "no_messages_yet": "No messages yet",
-  "no_messages_subtitle": "When someone sends you a message, it will appear here. Start a conversation to get things going!"
+  "no_messages_subtitle": "When someone sends you a message, it will appear here. Start a conversation to get things going!",
+  "chooseYourRole": "Choose Your Role"
 }
