--- a/mobile/translations/tg.json
+++ b/mobile/translations/tg.json
@@ -12,5 +12,6 @@
   "messages": "መልእኽታት",
   "no_messages_yet": "ክሳብ ሕጂ መልእኽቲ የለን",
   "logout": "ውጻእ",
-  "chooseLanguage": "ቋንቋ ምረጽ"
+  "chooseLanguage": "ቋንቋ ምረጽ",
+  "chooseYourRole": "ሚናኻ ምረጽ"
 }
