--- a/mobile/translations/tg.json
+++ b/mobile/translations/tg.json
@@ -13,5 +13,8 @@
   "no_messages_yet": "ክሳብ ሕጂ መልእኽቲ የለን",
   "logout": "ውጻእ",
   "chooseLanguage": "ቋንቋ ምረጽ",
-  "chooseYourRole": "ሚናኻ ምረጽ"
+  "chooseYourRole": "ሚናኻ ምረጽ",
+  "recommended": "ዝተመከረ",
+  "home": "ዋና",
+  "apartments": "ኣፓርታማታት"
 }
